--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "dependencies": {
     "@stripe/stripe-js": "^8.6.0",
     "@supabase/supabase-js": "^2.89.0",
+    "exceljs": "^4.4.0",
+    "firebase": "^12.7.0",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
-    "stripe": "^20.1.0",
-    "xlsx": "^0.18.5"
+    "stripe": "^20.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
